# stt-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
finetune/: collator.py  config.py  data.py  finetune.py  metrics.py  model.py  trainer.py
src/gigaam_ctc/: config.py  logger.py  main_batch.py  main_http.py  main_stream.py
src/gigaam_ctc/api/grpc/: registry.py  response_builder.py  s3_storage.py  server.py  servicer.py  stream_servicer.py
src/gigaam_ctc/api/http/: app.py  audio_decoder.py  routes.py  schemas.py
src/gigaam_ctc/core/: dtos.py  recognition_service.py  streaming_recognition_service.py  streaming_session.py
src/gigaam_ctc/core/vad/: factory.py  streaming_vad.py
src/gigaam_ctc/stt_model/: audio_utils.py  factory.py  logits_processor.py  model.py  streaming_inference.py
