[project]
name = "stt-service"
version = "0.1.0"
description = "Сервис распознавания речи"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "accelerate>=1.10.1",
    "aioboto3>=15.1.0",
    "clearml>=2.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
    "google-api-python-client>=2.190.0",
    "grpcio>=1.75.0",
    "kenlm>=0.3.0",
    "numpy<2.0",
    "protobuf<4",
    "pyannote-audio>=3.4.0",
    "pyctcdecode>=0.5.0",
    "pydub>=0.25.1",
    "safetensors>=0.6.2",
    "soundfile>=0.13.1",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "transformers==4.49",
    "av>=17.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ipykernel>=7.1.0",
    "locust>=2.41.2",
    "notebook>=7.4.7",
    "pydub>=0.25.1",
]

[tool.ruff]

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
    "grpc_stub"
]

line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]

known-first-party = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (импорты)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (советы по modern Python)
    "T20", # flake8-print (ловит print в prod-коде)
    "ARG", # unused arguments
    "PTH", # pathlib over os.path
    "D",
]

ignore = [
    "D104",  # Не требует докстринги у пакетов (__init__.py)
    "D105",  # Не требует докстринги у магических методов (__str__, __repr__)
    "D415", # Не требует точки на первой строке докстринги
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/requests/**" = ["T", "D", "ARG", "B", "E"]
"tests/stress/**" = ["T", "D"]
"tests/test_openai_api.py" = ["D"]
"tests/test_audio_decoder.py" = ["D"]
